--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
+  <script src="main.js"></script>
 
 </head>
 
@@ -30,6 +31,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">Home</a>
       <a class="btn btn-primary" href="#">Sign In</a>
+      <a class="btn btn-primary" id = "upload">Upload to Google Drive</a>
     </div>
   </nav>
 
@@ -106,7 +108,7 @@
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Using Model CNN</h2>
+          <h2>Using CNN Model</h2>
           <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
         </div>
       </div>
@@ -128,8 +130,9 @@
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Con_1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+            <h5>Con Ho Van</h5>
+            <p class="font-weight-light mb-0">Ho Chi Minh University of Technology</p>
+            <p class="font-weight-light mb-0">Electric - Electronic Department</p>
           </div>
         </div>
         <div class="col-lg-4">
